--- a/.github/workflows/Snake.yml
+++ b/.github/workflows/Snake.yml
@@ -25,10 +25,10 @@ jobs:
     steps:
       # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - uses: Platane/snk/svg-only@v3
-  with:
+        with:
     # github user name to read the contribution graph from (**required**)
     # using action context var `github.repository_owner` or specified user
-    github_user_name: ${{ BabyOilJohnson }}
+         github_user_name: ${{ github.repository_owner }} 
 
     # list of files to generate.
     # one file per line. Each output can be customized with options as query string.
