--- a/.github/workflows/Snake.yml
+++ b/.github/workflows/Snake.yml
@@ -24,7 +24,7 @@ jobs:
     
     steps:
     # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
-      - uses: Platane/snk@v3
+      - uses: Platane/snk/svg-only@v3
         with:
     # github user name to read the contribution graph from (**required**)
     # using action context var `github.repository_owner` or specified user
@@ -42,7 +42,9 @@ jobs:
          outputs: |
            dist/github-snake.svg
            dist/github-snake-dark.svg?palette=github-dark
-           dist/ocean.gif?palette=github-dark&color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+           dist/ocean.svg?palette=github-dark&color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+           dist/grey.svg?color_snake=111&color_dots=#eee,#aaa,#888,#666,#444
+
           
           
       # push the content of <build_dir> to a branch
